# youtubedlapi-server-infusiblecoder

./: .gitignore  AUTHORS  Dockerfile  README.md  README.rst  app.yaml  doc-requirements.txt  index.html  k8s-cleanup-script.sh  k8s-config.yaml  k8s-remove-deployment.sh  mainGAE.py  push_to_github.bat  pypi token.txt  pyproject.toml  requirements.txt  run kuberneties.txt  run_docker_on_vps.sh  setup.py  supervisord.conf  test.bat  tox.ini  upload to pypitest.txt
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
deploy/: Procfile  k8s-deploy-script.sh  mainGAE.py  supervisord.conf
deploy/scripts/: bgapi.sh  docker_container_check_audo_restart.sh  install_new_server_with_docker.sh  install_using_docker.sh  installdl.sh  installdl_debuin.sh  installdl_ubuntu.sh  kill_and_restart.sh  restart_docker_server.sh  run_dl_as_service.sh
devscripts/: batch_test.ps1  debug_extract.py  debug_extract2.py  debug_impersonation.py  publish_to_pypi.ps1  release.sh
docs/: Makefile  about.rst  api.rst  conf.py  index.rst  install.rst  make.bat  server-manual.rst
test/: batch_test.ps1  test.bat  test_api.bat  test_api.py  test_urls.txt
youtubedlapi_server_infusiblecoder/: app.py  celery_app_test.py  celery_config.py  fastapi_test.py  fastapi_test_celery.py  server.py
